# autogen-os2

./: .cloneignore  .gitignore  Makefile.am  NEWS.pre  VERSION.pre  announce.txt  configure.ac.pre
add-on/: MakeRules  Makefile
add-on/char-mapper/: Makefile  README  build-html.sh  char-mapper.c  char-mapper.h  map-text.def  mk-opt-table.sh  test.sh
add-on/cright-update/: Makefile  collapse.c  collapse.def  cright-update.c  cright.map  opts.def  test.sh
agen5/: Makefile.am.pre  ag-text.def  agCgi.c  agDep.c  agInit.c  agShell.c  agUtils.c  autogen.c  autogen.h  bootstrap.dir  cgi-fsm.c  cgi.def  defDirect.c  defFind.c  defLex.c  defLoad.c  defParse.def  defParse.x  expExtract.c  expFormat.c  expGperf.c  expGuile.c  expMake.c  expOutput.c  expPrint.c  expState.c  expString.c  fmemopen.c  fsm-macro.tlib  fsm-trans.tlib  fsm.tpl  funcCase.c  funcDef.c  funcEval.c  funcFor.c  funcIf.c  functions.c  functions.tpl  guile-iface.def  guile-iface.tpl  (+11 more)
agen5/test/: Makefile.am  alist.test  case.test  columns.test  daemon.test  debug.test  define.test  defref.test  directives.test  dynref.test  endmac.test  error.test  expr.test  extract.test  fmemopen.test  for.test  forfrom.test  forin.test  format.test  get.test  gperf.test  heredef.test  html.test  in.test  include.test  leave.test  license.test  line.test  loop.test  make.test  match.test  opts.test  output.test  pseudo.test  reorder.test  return.test  shell.test  snarf.test  stack.test  str2m.test  (+6 more)
autoopts/: .gitignore  Makefile.am.pre  alias.c  ao-strs.def  aoconf.def  aoconf.tpl  autogen.map  autoopts.c  autoopts.h  autoopts.m4  boolean.c  bootstrap.dir  check.c  configfile.c  cook.c  enum.c  env.c  file.c  find.c  genshell.def  init.c  install-hook.sh  load.c  makeshell.c  mk-tpl-config.sh  nested.c  numeric.c  opt-state.def  options_h.tpl  parse-duration.c  pgusage.c  proc-state.def  project.h  putshell.c  reset.c  restore.c  save-flags.def  save.c  sort.c  stack.c  (+9 more)
autoopts/test/: Makefile.am  alias.test  argument.test  cfg-edit.test  cond.test  config.test  defs.in  doc.test  enums.test  equiv.test  errors.test  getopt.test  handler.test  immediate.test  keyword.test  library.test  main.test  nested.test  nls.test  rc.test  shell.test  stdopts.def  stdopts.test  time.test  usage.test  vendor.test  vers.test
autoopts/tpl/: Mdoc.pm  aginfo.tpl  aginfo3.tpl  agman-cmd.tpl  agman-file.tpl  agman.tlib  agman1.tpl  agman3.tpl  agmdoc-cmd.tpl  agmdoc-file.tpl  agtexi-cmd.tpl  agtexi-file.tpl  bits.tpl  cmd-doc.tlib  def2pot.tpl  getopt.tpl  man2mdoc.pl  man2texi.sh  mdoc2man.pl  mdoc2texi.pl  optcode.tlib  optexits.def  opthead.tlib  options.tpl  optlib.tlib  optmain.tlib  rc-sample.tpl  stdoptions.def  str2enum.tpl  str2init.tlib  str2mask.tpl  strings.tpl  texi2man.sh  texi2mdoc.sh  tpl-config-tlib.in  usage.tlib
build-aux/: run-ag.sh
columns/: Makefile.am  bootstrap.dir  columns.c  opts.def
compat/: Makefile.am  bootstrap.dir  chmod.c  compat.h  pathfind.c  snprintf.c  strchr.c  strftime.c  strsignal.c  strsignal.def  strsignal.tpl  unlocked-io.h  windows-config.h
config/: .gitignore  ag_macros.m4  bootstrap  bootstrap.local  bootstrap.shlib  gen-list.txt  install-defs.sh  libopts.m4  liboptschk.m4  m4.tgz  misc.def  mk-shdefs.in  mk-unlocked-io.sh  unlocked-io.m4
doc/: Makefile.am  auto-opts.tlib  auto_gen-tpl.in  autogen-intro.texi  autogen-texi.txt  bitmaps.texi  mk-agen-texi.sh
getdefs/: Makefile.am  bootstrap.dir  gdemit.c  gdinit.c  getdefs.c  getdefs.h  opts.def
getdefs/test/: Makefile.am  cfg.test  index.test  option.test  subblock.test
pkg/: Makefile.am.pre  gnudir.tpl  gnudoc.tpl  lsm.tpl  mkpkg.linux  mkpkg.sh  mkpkg.sun  pkg-env.in  spec.tpl
pkg/libopts/: COPYING.gplv3  COPYING.lgplv3  COPYING.mbsd  README  libopts-add.m4  mklibsrc.sh
snprintfv/: bootstrap.dir  compat.h  custom.c  filament.c  filament.in  format.c  mem.c  mem.h  printf.c  printf.in  stream.c
xml2ag/: Makefile.am  fork.tpl  xml2ag.c  xmlopts.def
xml2ag/test/: Makefile.am  convert.test
